0.9dev (unreleased)
===================

Documentation
-------------

- Added "BFG Wiki" tutorial to documentation; it describes
  step-by-step how to create a traversal-based ZODB application with
  authentication.

Deprecation Additions
---------------------

- Added deprecations for imports of ``ACLSecurityPolicy``,
  ``InheritingACLSecurityPolicy``, ``RemoteUserACLSecurityPolicy``,
  ``RemoteUserInheritingACLSecurityPolicy``, ``WhoACLSecurityPolicy``,
  and ``WhoInheritingACLSecurityPolicy`` from the
  ``repoze.bfg.security`` module; for the meantime (for backwards
  compatibility purposes) these live in the ``repoze.bfg.secpols``
  module.  Note however, that the entire concept of a "security
  policy" is deprecated in BFG in favor of separate authentication and
  authorization policies, so any use of a security policy will
  generate additional deprecation warnings even if you do start using
  ``repoze.bfg.secpols``.  ``repoze.bfg.secpols`` will disappear in a
  future release of ``repoze.bfg``.

Deprecated Alias Removals
-------------------------

- Remove ``repoze.bfg.template`` module.  All imports from this
  package have been deprecated since version 0.3.8.  Instead, import
  ``get_template``, ``render_template``, and
  ``render_template_to_response`` from the
  ``repoze.bfg.chameleon_zpt``module.

- Remove backwards compatibility alias for
  ``repoze.bfg.traversal.split_path`` (deprecated since 0.6.5).  This
  must now be imported as ``repoze.bfg.traversal.traversal_path``).

- Remove backwards compatibility alias for
  ``repoze.bfg.urldispatch.RoutesContext`` (deprecated since 0.6.5).
  This must now be imported as
  ``repoze.bfg.urldispatch.DefaultRoutesContext``.

- Removed backwards compatibility aliases for
  ``repoze.bfg.router.get_options`` and ``repoze.bfg.router.Settings``
  (deprecated since 0.6.2).  These both must now be imported from
  ``repoze.bfg.settings``.

0.9a2 (2009-05-27)
==================

Features
--------
